--- a/index.html
+++ b/index.html
@@ -10,11 +10,18 @@
     <link
         href="https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;500;700&family=Inter:wght@300;500&display=swap"
         rel="stylesheet">
-        <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="./style.css">
 </head>
 
 <body>
-    <header></header>
+    <header>
+        <img src="./assets/img/logo.svg" alt="">
+        <div class="header--title-container">
+            <h1>La próxima revolución en el intercambio de criptomonedas.</h1>
+            <p>Batabit te ayuda a navegar entre los diferentes precios y tendencias.</p>
+            <a href="" class="header--button">Conoce Nuestros Planes <span>i</span> </a>
+        </div>
+    </header>
     <main>
         <section></section>
         <section></section>
