--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                         <table>
                             <tr>
                                 <td class="table__top-left">Bitcoin</td>
-                                <td class="table_top-right table__right">$1.96 <span></span></td>
+                                <td class="table_top-right table__right">$1.96 <span class="down"></span></td>
                             </tr>
                             <tr>
                                 <td>Ethereum</td>
@@ -45,7 +45,7 @@
                             </tr>
                             <tr>
                                 <td>Ripple</td>
-                                <td class="table_right">$ 2.15</td>
+                                <td class="table__right">$ 2.15</td>
                             </tr>
                             <tr>
                                 <td class="table__bottom-left">Stellar</td>
