Finalizando estilos de tabla en monedas

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                     </div>
                 </div>
                 <div class="main-commissions-table">
-                    <p class="commissions-table-title">Comisiones</p> 
+                    <p class="commissions-table-title">Comisiones</p>
                     <div class="comissions-table-container">
                         <table>
                             <tr>
@@ -78,6 +78,9 @@
                                 <td class="table__bottom-right table__right">$ 14.96</td>
                             </tr>
                         </table>
+                    </div>
+                    <div class="comissions-table--date">
+                        <p><b>Actualizado:</b> 19 Julio 23:48</p>
                     </div>
 
                 </div>
