Agregando los 2 cards de los planes extra

--- a/index.html
+++ b/index.html
@@ -138,6 +138,25 @@
                         <button class="plan-card--ca">Escoger este <span></span></button>
                     </div>
                 </article>
+                <article class="plans-container--card">
+                    <p class="free">Prueba</p>
+                    <div class="plan-info-container">
+                        <h3 class="plan-card--title">Prueba gratis</h3>
+                        <p class="plan-card--price"> <span>$</span> 0</p>
+                        <p class="plan-card--saving">*Prueba de un mes.</p>
+                        <button class="plan-card--ca">Escoger este <span></span></button>
+                    </div>
+                </article>
+                <article class="plans-container--card-vip">
+                    <p class="recommended">VIP</p>
+                    <div class="plan-info-container">
+                        <h3 class="plan-card--title-vip">Pago Anual</h3>
+                        <p class="plan-card--price-vip"> <span>$</span> 199</p>
+                        <p class="plan-card--saving">*Acceso a todo el contenido sin limites.</p>
+                        <button class="plan-card--ca">Escoger este <span></span></button>
+                    </div>
+                </article>
+
             </section>
         </section>
     </main>
